syntax = "proto3";
import "users.proto";
option go_package = "github.com/lucaspere/grpc/multiple_services";
 
service Repo {
  rpc GetRepos (RepoGetRequest) returns (stream RepoGetReply) {}
  rpc CreateRepo (stream RepoCreateRequest) returns (RepoCreateReply){}
}
 
message RepoGetRequest {
  string id = 2;
  string creator_id = 1;
  bytes data = 3;
}

message RepoData {
  bytes data = 1;
}

message RepoContext {
  string creator_id = 1;
  string name = 2;
}

message RepoCreateReply {
  Repository repo = 1;
  int32 size = 2;
} 
message RepoCreateRequest {
  oneof body {
    RepoContext context = 1;
    bytes data = 2;
  }
}

message Repository {
  string id = 1;
  string name = 2;
  string url = 3;
  User owner = 4;
}
 
message RepoGetReply {
  Repository repo = 1;
} 